--- a/PBI1.html
+++ b/PBI1.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PBI 1</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <h1>Edit PBI1</h1>
     <h1>Edit ke 2 kali PBI1</h1>
     <h1>Tambahan PBI 1</h1>
-</body>
-
+    <h1>tambah kode di PBI 1</h1>
+  </body>
 </html>
